--- a/ui-design/css/variables.css
+++ b/ui-design/css/variables.css
@@ -41,13 +41,13 @@
 	--body-margin: 2vw;
 
 	--percent-menu-element: 14.38%;
-	--percent-sidebar: 31.2%;
-	--percent-content: 61.8%;
+	--percent-sidebar: 37.64%;
+	--percent-content: 61.18%;
 
 	--menu-element: 16.22em;
-	--sidebar: 42.47em;
-	--content: 68.72em;
-	--full-width: 96vw;
+	--sidebar: 41.59em;
+	--content: 67.61em;
+	--full-width: 94.34vw;
 
 	--br: 10px;
 
